登录、注册部分模板完成，修改bootstrap模板。

--- a/views/404.handlebars
+++ b/views/404.handlebars
@@ -1,1 +1,10 @@
-<h1> 消失了 </h1>
+
+<div class="container">
+<div class="jumbotron">
+  <h1>您要找的页面不存在</h1>
+  <p>...</p>
+  <p>请联系网站管理员</p>
+  <p><a class="btn btn-primary btn-lg" href="/" role="button">返回首页</a></p>
+</div>
+
+</div>
