--- a/views/statistics/in_st.handlebars
+++ b/views/statistics/in_st.handlebars
@@ -1,6 +1,6 @@
 
 
- <div class="page-header">
+ <div class="container-fluid">
         <h1>{{dwmc_main}}2015年物资收料统计</h1>
 
 
@@ -32,6 +32,8 @@
                 <td>{{djcount}}</td>
                 <td>{{wzcount}}</td>
               </tr>
+     {{else}}
+               <h1>未检索到您要的数据!</h1>
      {{/each}}
  
             </tbody>
