--- a/views/statistics/in_st_querypage.handlebars
+++ b/views/statistics/in_st_querypage.handlebars
@@ -1,9 +1,9 @@
 
-
+<div class = "container">
 <div class="row">
   <div class="col-lg-3">
     <div class="input-group">
-        <span class="input-group-addon" id="sizing-addon1">单位名称</span>
+        <span class="input-group-addon" id="dwbh">单位名称</span>
         <!-- 单位列表框-->
         <select id="dwbh" class="form-control">
         {{#each DW_LIST}}
@@ -12,9 +12,11 @@
         </select>
     </div><!-- /input-group -->
   </div><!-- /.col-lg-6 -->
+
+
   <div class="col-lg-3">
     <div class="input-group">
-         <span class="input-group-addon" id="sizing-addon1">物资编号</span>
+         <span class="input-group-addon" id="wzbh">物资编号</span>
          <input id="wzbh" type="text" class="form-control" placeholder="007410101"sizing-addon1">
     </div><!-- /input-group -->
   </div><!-- /.col-lg-6 -->
@@ -29,6 +31,7 @@
 </div><!-- /.row -->
 
 
+</div>
 
 
 
@@ -36,8 +39,7 @@
 
 
 
-
-<div id="wzdetail">
+<div calss="container-fluid" id="wzdetail">
    查询结果显示区
 </div>
 
