--- a/views/users/login.handlebars
+++ b/views/users/login.handlebars
@@ -1,5 +1,28 @@
+
+<div class ="container">
+
+<h2> 用户登录</h2>
+<div class = "row" ><h1></h1></div>
+
+<div class = "row" >
+<div class = "col-lg-6" >
+
+
 <form method="post">
-  用户名：<input type="text" name="name"/><br />
-  密码：  <input type="password" name="password"/><br />
-          <input type="submit" value="登录"/>
+  <div class="form-group" >
+	  <label for = "name1"> 用户名：</label>
+	  <input type="text" class="form-control" id="name1" name="name"/><br />
+  </div>
+
+  <div class="form-group">
+    	  <label for = "pass1">  密码： </label>
+        <input id = "pass1"  class="form-control" type="password" name="password"/><br />
+  </div>
+         
+                  
+   <button type="submit" class = "btn btn-default" > 登录 </button>
+ 
 </form>
+</div>
+</div>
+</div>
