--- a/views/500.handlebars
+++ b/views/500.handlebars
@@ -1,1 +1,9 @@
-<h1>好像有什么事情不对了</h1>
+
+<div class="container">
+<div class="jumbotron">
+  <h1>好像有什么事情不对了</h1>
+  <p>...</p>
+  <p>请联系网站管理员</p>
+  <p><a class="btn btn-primary btn-lg" href="/" role="button">返回首页</a></p>
+</div>
+</div>
