--- a/views/layouts/main20160711.handlebars
+++ b/views/layouts/main20160711.handlebars
@@ -40,7 +40,6 @@
     <!-- Fixed navbar -->
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
-        
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
@@ -48,25 +47,29 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">供应管理</a>
+          <a class="navbar-brand" href="#">Bootstrap theme</a>
         </div>
-
-     {{!导航条菜单，中部，主菜单，---------------------------------------------------------------------}}   
-        
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-
-                   <!--       <li><a href="/users/about">数据库测试</a></li>-->
-                  <!--       <li><a href="/statistics/in_st">收料统计</a></li>  -->
+            <li class="active"><a href="/">Home</a></li>
+            <li class="active" id="username"><a href="/users/login">登录</a></li>
+            <li><a href="/users/reg" id="reg">注册</a></li>
+            <li><a href="/users/logout">退出</a></li>
+     <!--       <li><a href="/users/about">数据库测试</a></li>-->
+     <!--       <li><a href="/statistics/in_st">收料统计</a></li>  -->
             <li><a href="/statistics/in_st_querypage">收料分类</a></li>            
-                  <!-- <li><a href="/statistics/in_detail">明细</a></li>  -->
+           <!-- <li><a href="/statistics/in_detail">明细</a></li>  -->
                      
-                   <!-- <li><a href="/statistics/in_wz_search">物资信息查询</a></li>  -->
+            <!-- <li><a href="/statistics/in_wz_search">物资信息查询</a></li>  -->
             <li><a href="/statistics/in_wz_search_querypage">收料明细</a></li>
             <li><a href="/statistics/div_summary">供应科总结</a></li>
+
             <li><a href="/statistics/in_wz_search_querypage">查询条件页</a></li>           
+            
+            
             <li><a href="/users/testjavascript">JS测试</a></li>
             <li><a href="/users/newsletter">form test</a></li>
+
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
               <ul class="dropdown-menu">
@@ -81,62 +84,23 @@
               </ul>
             </li>
           </ul>
-
-
-                
-                
-     {{!导航条菜单，右部，---------------------------------------------------------------------}}            
-                
-                <ul class="nav navbar-nav navbar-right">
-
-                  <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-
-                    <ul class="dropdown-menu">
-                      <li><a href="#">Action</a></li>
-                      <li><a href="#">Another action</a></li>
-                      <li><a href="#">Something else here</a></li>
-                      <li role="separator" class="divider"></li>
-                      <li><a href="#">Separated link</a></li>
-                    </ul>
-                  </li>
-          
-
-     {{!用户列表，在中间件中设置.如果登录显示用户名，未登录显示登录、注册----------------------------------------------}}
-             {{#if user}}
-
-            <li><a href="/users/logout">退出</a></li>
-            <li><a href="/users/logout">{{user.name}}</a></li>             
-             {{else}}
-            <li class="active" id="username"><a href="/users/login">登录</a></li>
-            <li><a href="/users/reg" id="reg">注册</a></li>
-
-           {{/if}}
-      </ul>
-
         </div><!--/.nav-collapse -->
-
       </div>
     </nav>
- {{!，导航条，结束----------------------------------------------}}
 
 
-<!--    巨幕  
+    <div class="container theme-showcase" role="main">     -->
 
-    <div class="container theme-showcase" role="main">    
-       <div class="jumbotron">
+      <!-- Main jumbotron for a primary marketing message or call to action -->
+    <div class="jumbotron">
+        <!-- 
         <h1>正确地做事  不要走捷径</h1>
         <p>当你不知道该做什么的时候，就把手头的每件小事做好；当你不知道怎么开始时，就把离你最近的事情做好。</p>
+      -->
         </div>
-    </div>      
--->
-
-
-     {{!，导航条是浮动的，此处需占导航条下的空行----------------------------------------------}}
-     <div calass="container">     <div class = "row"><h2></h2></div></div>
-
-      {{#if flash}}
-       <div calass="container">     <div class = "row"><h2></h3></div></div>    
+       </div>      
+    
+         {{#if flash}}
              <div class="alert alert-dismissible alert-{{flash.type}}">
                  <button type="button" class="close"
                         data-dismiss="alert" aria-hidden="true">&times;<button>
