--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -67,6 +67,7 @@
             <li><a href="/statistics/in_wz_search_querypage">查询条件页</a></li>           
             <li><a href="/users/testjavascript">JS测试</a></li>
             <li><a href="/users/newsletter">form test</a></li>
+            <li><a href="/posts">发表文章</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
               <ul class="dropdown-menu">
