--- a/views/posts/index.handlebars
+++ b/views/posts/index.handlebars
@@ -1,3 +1,10 @@
+<script src="Chart.js"></script>
+<canvas id="myChart" width="400" height="400"></canvas>
+<script>
+
+
+</script>
+
 
 <div class = "container-fluid">
 
